# nut

./: .gitignore  Cargo.toml  README.md
crates/sarzak-mc/: Cargo.toml
crates/sarzak-mc/src/: lib.rs
crates/test_models/: Cargo.toml
crates/test_models/models/: associative.json  imported_object.json  isa_relationship.json  one_to_many.json  singleton.json
crates/test_models/src/: associative.rs  everything.rs  imported_object.rs  isa_relationship.rs  lib.rs  one_to_many.rs  singleton.rs
crates/test_models/src/associative/: macros.rs  store.rs  types.rs
crates/test_models/src/everything/: macros.rs  store.rs  types.rs
crates/test_models/src/imported_object/: macros.rs  store.rs  types.rs
crates/test_models/src/isa_relationship/: macros.rs  store.rs  types.rs
crates/test_models/src/one_to_many/: macros.rs  store.rs  types.rs
crates/test_models/src/one_to_one/: macros.rs  store.rs  types.rs
crates/test_models/src/singleton/: macros.rs  store.rs  types.rs
models/: blank.json  cat_dog.json  drawing_orig.json
src/: codegen.rs  domain.rs  drawing.rs  lib.rs  model.rs  ooa_0.rs  ooa_1.rs  ooa_2.rs  sarzak.rs
src/codegen/: config.rs  context.rs  macros.rs  template.rs  types.rs
src/codegen/template/: macros.rs  types.rs
src/domain/: generate_macros.rs  generate_store.rs  generate_types.rs
src/drawing/: drawing.rs  drawing_impls.rs  macros.rs  macros_2.rs  object_store.rs
src/model/: jsformat.rs
src/ooa_0/: attribute.rs  object.rs  relationship.rs
src/ooa_1/: extrude.rs  object.rs  relationship.rs
src/ooa_2/: macros.rs  object.rs  object_store.rs  relationship.rs
src/sarzak/: macros.rs  mc.rs
tests/: cat_dog.json  generate_test_domain.rs  test_drawing.rs  test_macro.rs  test_ooa_1.rs  test_ooa_2.rs
