[package]
name = "sarzak-mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
nut = { path = "../.." }
clap = { version = "4.1.1", features = ["derive"] }
log = "0.4.17"
anyhow = "1.0.68"
