[package]
name = "test_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v5"] }
nut = { path = "../.." }
embed-doc-image = "0.1.4"

[features]
doc-images = []
default = ["doc-images"]
